fix #21: make top header sticky on smaller screens

--- a/pwa/src/app/components/typeahead/typeahead.component.scss
+++ b/pwa/src/app/components/typeahead/typeahead.component.scss
@@ -1,13 +1,13 @@
 @import 'bootstrap/scss/bootstrap';
 
 .input-group input.form-control {
-  border-bottom-left-radius: 0 !important;
-  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: $border-radius !important;
+  border-top-left-radius: $border-radius !important;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .input-group input.form-control {
-    border-bottom-left-radius: $border-radius !important;
-    border-top-left-radius: $border-radius !important;;
+    border-bottom-left-radius: 0 !important;
+    border-top-left-radius: 0 !important;
   }
 }
